@@ -21,6 +21,7 @@
 #define OBJSTACK_H
 
 typedef enum {
+    GRETL_OBJ_NULL,
     GRETL_OBJ_ANY,
     GRETL_OBJ_EQN,
     GRETL_OBJ_SYS,
@@ -37,7 +38,6 @@ typedef enum {
     GRETL_OBJ_PLOT,
     GRETL_OBJ_TEXT,
     GRETL_OBJ_MATRIX,
-    GRETL_OBJ_UNKNOWN,
     GRETL_OBJ_MAX
 } GretlObjType;
 
