@@ -26,6 +26,10 @@ version 1.7.5, in progress
 - Add log-axis option to GUI graph editing dialog
 - GUI program: add right-click popup menus to more windows
 - Fix bugs 1929957, 1922915
+- Add guard against unmatched "if" in loops, functions and
+  scripts
+- Fix bug: VARs and equation systems not getting removed as
+  "last model" on exit from user-defined functions
 
 3/21/2008 version 1.7.4
 - Fix for ADF-GLS test with missing values
